# plan-ai

./: .cursorrules  .gitignore  .gitnexusignore  .prettierignore  .windsurfrules  AGENTS.md  APOLLO.md  APPS.md  AUDIO.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  GEMINI.md  IMPROVEMENTS.md  JIRA.md  LICENSE  NICHE.md  NOTION.md  OPENSOURCE.md  PLAN.md  PROJECT_CONTEXT.md  PROPUESTA.md  README.md  RULES.md  SCALING.md  STRIPE.md  TELEGRAM.md  TESTING.md  TICKET.md  TRELLO.md  VIDEO.md  XAVI.md  package.json  repomix.sh  storage.rules
.gitnexus/: group.yaml
.husky/: pre-commit  pre-push
backend/: .env.template  .prettierignore  Dockerfile  docker-compose.yml  eslint.config.mjs  package.json  tsconfig.json  tsoa.json  vitest.config.ts
docs/: Dockerfile  RELEASES.md  package.json
frontend/: .env.template  .gitignore  .prettierignore  Dockerfile  nginx.conf  package.json  tsconfig.json
landing/: next.config.ts  package.json  tailwind.config.ts  wrangler.toml
plan-ai-mobile/: .easignore  .gitignore  .gitnexusignore  AGENTS.md  AUTH.md  CLAUDE.md  GoogleService-Info.plist  README.md  TASKS.md  adi-registration.properties  app.config.ts  eas.json  google-services.json  package.json
plan-ai-recorder/: .env.template  .eslintrc.cjs  .gitignore  .gitnexusignore  AGENTS.md  CLAUDE.md  README.md  electron-builder.config.js  electron.vite.config.ts  index.html  package.json  (+2 more)
plan-ai/voice-ai/: Dockerfile  main.py  pyproject.toml  requirements.txt
plan-ai/voice-ai/model/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
(+832 files in other folders)
