[project]
name = "voice-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.27",
    "sentry-sdk>=2.60.0",
    "speechbrain>=1.1.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.46.0",
]
